<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">美乐门家政</string>

    <string name="title_service">美乐门服务</string>
    <string name="title_register">快速登录</string>

    <string name="item_housekeeping">钟点服务</string>
    <string name="item_dryclean">干洗洗涤</string>
    <string name="item_leather">皮具护理</string>
    
    <string name="menu_home">首页</string>
    <string name="menu_order">订单</string>
    <string name="menu_person">会员中心</string>
    <string name="menu_phone">客服</string>
    <string name="phone_title">全国服务热线</string>
    <string name="phone_number">4008-878-4848</string>
    <string name="phone_call">拨打</string>

    <string name="order_order">发起预约</string>
    <string name="order_datetime">服务时间</string>
    <string name="order_datetimehit">请选择时间</string>
    <string name="order_hours">服务时长</string>
    <string name="order_hours2">2小时\n<b>60</b>元</string>
    <string name="order_hours3">3小时\n<b>75</b>元</string>
    <string name="order_hours4">4小时\n<b>120</b>元</string>
    <string name="order_address">服务地址</string>
    <string name="order_addresshit">请输入地址</string>
    <string name="order_person">联系人</string>
    <string name="order_personhit">请输入联系人</string>
    <string name="order_phone">手机号</string>
    <string name="order_phonehit">请输入手机号</string>
    <string name="order_note">\n\n备注:\n\n</string>
    

    <string name="order_item">请选择服务项目</string> 
    <string name="order_type">服务类型</string>
    <string name="order_subcount">总数量(件):</string>
    <string name="order_subtotal">总价格(元):</string>
    <string name="order_success">预约成功</string>

    <string name="dialog_quit">确定要退出？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="button_confirm">确定</string>

    <string name="about">
        标准服务流程，为您提供更干净、更卫生的优质家庭服务。
        \n\t1、平时服务提前2-3天预约；
        \n\t2、双休日服务提前4-6天；
        \n\t3、年前服务请提前15天预约；
        \n\t4、法定节假日不提供服务。
    </string>

    <string name="register_phonenumber">请输入手机号码</string>
    <string name="register_getcode">获取验证码</string>
    <string name="register_code">请输入验证码</string>
    <string name="register_login">登录</string>
    
    <string name="order_title">我的订单</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_empty">您没有订单</string>
    <string name="order_icon">约</string>
    <string name="order_status_wait">等待接单</string>
    <string name="order_status_valid">无效订单</string>
    <string name="order_status_over">交易完成</string>
</resources>
