<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffdddddd"
    android:orientation="vertical" >
 <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffdddddd">

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="match_parent"
      android:background="#ffdddddd"
      android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="#ffffffff" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_centerInParent="true"
            android:text="@string/order_order"
            android:textColor="#ff000000"
            android:textStyle="bold"
            android:textSize="24sp" />
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginTop="20dip"
        android:background="#ffffffff"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:paddingLeft="5dp"
        	 android:paddingTop="5dp"
        	 android:paddingRight="5dp"
        	 android:paddingBottom="5dp"
             android:background="@drawable/datetime"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
        	android:textColor="#ff000000"
        	android:paddingLeft="5dp"
        	android:paddingTop="5dp"
        	android:paddingRight="5dp"
        	android:paddingBottom="5dp"
        	android:text="@string/order_datetime"
            android:layout_gravity="left|center_vertical"/>
        <LinearLayout
           android:layout_width="0dp"
           android:layout_height="fill_parent" 
           android:layout_weight="1" 
           android:orientation="horizontal">
        </LinearLayout>

        <Button
            android:id="@+id/btn_datetime"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="4dp"
            android:background="#00000000"
            android:singleLine="true"
            android:drawableRight="@drawable/rightarrow"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/order_datetimehit"
            android:textColor="#ff888888"
            android:gravity="right|center_vertical"
            android:textSize="16sp" />

    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="2.5"
        android:layout_marginTop="20dip"
        android:background="#ffffffff"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:orientation="horizontal"
            android:gravity="center_vertical">   
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/hours"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ff000000"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/order_hours"
                android:layout_gravity="left|center_vertical"/>     
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1.5"
            android:background="#ffffffff"
            android:layout_marginBottom="5dip"
            android:orientation="horizontal">  
            <TextView 
                android:id="@+id/hours2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/rect_selected"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/buttonshape_selected"
                android:text="@string/order_hours2"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>  
             <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent" 
                android:layout_weight="1" 
                android:orientation="horizontal">
             </LinearLayout> 
             <TextView 
                android:id="@+id/hours3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ff000000"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/order_hours3"
                android:background="@drawable/buttonshape_normal"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>
              <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent" 
                android:layout_weight="1" 
                android:orientation="horizontal">
              </LinearLayout> 
              <TextView 
                android:id="@+id/hours4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ff000000"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/order_hours4"
                android:background="@drawable/buttonshape_normal"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>     
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginTop="20dip"
        android:background="#ffffffff"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:paddingLeft="5dp"
        	 android:paddingTop="5dp"
        	 android:paddingRight="5dp"
        	 android:paddingBottom="5dp"
             android:background="@drawable/location"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
        	android:textColor="#ff000000"
        	android:paddingLeft="5dp"
        	android:paddingTop="5dp"
        	android:paddingRight="5dp"
        	android:paddingBottom="5dp"
        	android:text="@string/order_address"
            android:layout_gravity="left|center_vertical"/>
        <LinearLayout
           android:layout_width="0dp"
           android:layout_height="fill_parent" 
           android:layout_weight="1" 
           android:orientation="horizontal">
        </LinearLayout>
        <Button 
             android:id="@+id/btn_address"
             android:layout_marginRight="4dp"
             android:layout_width="220dip"
       		 android:layout_height="wrap_content"
      	  	 android:text="@string/order_addresshit"
        	 android:textSize="16sp"
        	 android:singleLine="true"
        	 android:textColor="#ff888888"
        	 android:paddingLeft="5dp"
        	 android:paddingTop="5dp"
        	 android:paddingRight="5dp"
        	 android:paddingBottom="5dp"
       		 android:drawableRight="@drawable/rightarrow"
        	 android:background="#00000000"
        	 android:gravity="right|center_vertical"
        	 android:layout_gravity="right|center_vertical"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:layout_marginTop="20dip"
        android:background="#ffffffff"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="70dip"
                android:layout_height="fill_parent"
                android:layout_gravity="left|center_vertical"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/order_person"
                android:textColor="#ff000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/contacts"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="5dip"
                android:clickable="true"
                android:gravity="center_vertical"
                android:hint="@string/order_personhit"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="#ff000000"
                android:textSize="16sp" />
        
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="1dip"
            android:layout_marginBottom="1dip"
            android:background="#ffdddddd"
            android:orientation="vertical">        
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:orientation="horizontal"
            android:gravity="center_vertical"> 

            <TextView
                android:layout_width="70dip"
                android:layout_height="fill_parent"
                android:layout_gravity="left|center_vertical"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/order_phone"
                android:textColor="#ff000000"
                android:textSize="20sp" />

            <EditText 
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="16sp"
                android:textColor="#ff000000"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="5dip"
                android:inputType="number"
                android:singleLine="true"
                android:clickable="true"
                android:hint="@string/order_phonehit"
                android:layout_gravity="left|center_vertical"/>        
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginTop="20dip"
        android:background="#ffffffff"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
                android:layout_width="70dip"
                android:layout_height="fill_parent"
                android:textSize="20sp"
                android:textColor="#ff000000"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/order_note"
                android:layout_gravity="left|center_vertical"/>
         <EditText 
                android:id="@+id/note"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="16sp"
                android:textColor="#ff000000"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="5dip"
                android:singleLine="false"
                android:scrollbars="vertical"
                android:clickable="true"
                android:layout_gravity="left|center_vertical"/>
        
    </LinearLayout>

    <Button 
             android:id="@+id/btn_commit"
             android:layout_marginRight="30dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="25dp"
             android:layout_marginBottom="5dp"
             android:layout_width="fill_parent"
       		 android:layout_height="fill_parent"
      	  	 android:text="@string/order_order"
        	 android:textSize="16sp"
        	 android:textColor="#ffffffff"
        	 android:paddingLeft="5dp"
        	 android:paddingTop="10dp"
        	 android:paddingRight="5dp"
        	 android:paddingBottom="10dp"
        	 android:background="#ff2d93de"
        	 android:layout_gravity="center_horizontal|center_vertical"/>
  </LinearLayout>
 </ScrollView>
</LinearLayout>
